# KAG_LlamaIndex

./: .dockerignore  .gitignore  Dockerfile  Implementation plan.md  README.md  airflow.cfg  docker-compose.yml  final_results_summary.md  main_hybrid_demo.py  main_neo4j_demo.py  main_user_validation_demo.py  pyproject.toml  requirements.txt  technical_report.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-issue-template.md
ETL_expr/: news_extract.py
LlamaIndex_PGI/: .gitignore  README.md  main.py  pyproject.toml
LlamaIndex_PGI/app/builder/: news_builder.py  storage_manager.py
LlamaIndex_PGI/app/schema/: news_schema.py
LlamaIndex_PGI/app/solver/: news_solver.py
LlamaIndex_PGI/app/validator/: news_validator.py
app/etl/: enricher.py  extractor.py  storage.py
app/graph/: jit_builder.py  knowledge_graph.py
app/rag/: decomposer.py  evaluator.py  graph_flow.py  hybrid_retriever.py  langchain_solver.py  solver.py
core/: code_sandbox.py  rlm_evaluator.py
core/lib/rlm/: repl.py  rlm.py  rlm_repl.py
core/lib/rlm/utils/: llm.py  utils.py
dags/: mk_news_dag.py
tests/: test_long_context_wiki.py
