[project]
name = "llamaindex-pgi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "chromadb>=1.4.1",
    "datasets>=4.5.0",
    "langchain-anthropic>=1.3.1",
    "langchain-elasticsearch>=1.0.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "llama-index>=0.14.13",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-graph-stores-neo4j>=0.5.1",
    "llama-index-llms-anthropic>=0.10.6",
    "llama-index-llms-openai>=0.6.15",
    "llama-index-retrievers-bm25>=0.6.5",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-vector-stores-elasticsearch>=0.5.1",
    "python-dotenv>=1.2.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.46",
]
